# graph-binary-rs

./: .gitignore  Cargo.toml
benches/: benchmark.rs
docker-compose/: docker-compose.yaml
docker-compose/DockerFiles/: janusGraph.Dockerfile  tinkerGraph.Dockerfile
docker-compose/DockerFiles/janusgraph/: air-routes.properties  gremlin-server-graph-binary.yaml  janusgraph-config.properties  startup.groovy
docker-compose/DockerFiles/tinkergraph/: air-routes.properties  gremlin-server-graph-binary.yaml
driver/: Cargo.toml
driver/src/: client.rs  error.rs  lib.rs  message.rs
driver/src/process/: bytecode_traversal.rs  graph_traversal_source.rs  traversal.rs
driver/src/process/params/: add_element_params.rs  by_params.rs  coalesce_params.rs  dedup_params.rs  emit_params.rs  filter_params.rs  fold_params.rs  from_step_params.rs  has_id_params.rs  has_params.rs  has_strings_params.rs  is_param.rs  merge_params.rs  multi_strings.rs  object_param.rs  option_params.rs  project_params.rs  property_params.rs  repeat_param.rs  sack_params.rs  scope_params.rs  select_params.rs  single_string.rs  tail_params.rs  to_step_params.rs  until_params.rs  where_params.rs
driver/tests/: websocket.rs
gremlin_types/: Cargo.toml
gremlin_types/benches/: benchmark.rs
gremlin_types/src/: custom.rs  de.rs  error.rs  graph_binary.rs  graphson.rs  lib.rs  macros.rs  message.rs  ser.rs  specs.rs
gremlin_types/src/binary/: enums.rs  mod.rs
gremlin_types/src/de/: deser_gb.rs  error.rs  graphson.rs  mod.rs
gremlin_types/src/extended/: chrono.rs  std.rs
gremlin_types/src/graph_binary/: enums.rs  extended.rs  mod.rs  primitivs.rs  std_collections.rs  structures.rs
gremlin_types/src/graphson/: enums.rs  extended.rs  mod.rs  std_collections.rs  structures.rs
gremlin_types/src/ser/: mod.rs
gremlin_types/src/structure/: bigint.rs  binding.rs  bulkset.rs  bytebuffer.rs  bytecode.rs  edge.rs  enums.rs  graph.rs  id.rs  lambda.rs  list.rs  map.rs  metrics.rs  mod.rs  path.rs  primitivs.rs  property.rs  set.rs  traverser.rs  tree.rs  vertex.rs  vertex_property.rs
src/: client.rs  error.rs  graph_binary.rs  lib.rs  macros.rs  message.rs  specs.rs
src/de/: deser_gb.rs  mod.rs
src/process/: bytecode_traversal.rs  graph_traversal_source.rs  mod.rs  traversal.rs
src/process/params/: add_element_params.rs  by_params.rs  coalesce_params.rs  dedup_params.rs  emit_params.rs  filter_params.rs  fold_params.rs  from_step_params.rs  has_id_params.rs  has_params.rs  has_strings_params.rs  is_param.rs  merge_params.rs  mod.rs  multi_strings.rs  object_param.rs  option_params.rs  project_params.rs  property_params.rs  repeat_param.rs  sack_params.rs  scope_params.rs  select_params.rs  single_string.rs  tail_params.rs  to_step_params.rs  until_params.rs  where_params.rs
src/ser/: mod.rs
src/structure/: binding.rs  bulkset.rs  bytecode.rs  edge.rs  enums.rs  graph.rs  lambda.rs  list.rs  map.rs  metrics.rs  mod.rs  path.rs  primitivs.rs  property.rs  traverser.rs  tree.rs  vertex.rs  vertex_property.rs
tests/: websocket.rs
tinkerpop_io/: Cargo.toml
tinkerpop_io/benches/: benchmark.rs
tinkerpop_io/src/: custom.rs  error.rs  lib.rs  macros.rs  ser.rs
tinkerpop_io/src/binary/: mod.rs  structures.rs
tinkerpop_io/src/extended/: mod.rs  std.rs
tinkerpop_io/src/graphson/: enums.rs  primitivs.rs  std_collections.rs  structures.rs
tinkerpop_io/src/structure/: binding.rs  bulkset.rs  bytebuffer.rs  bytecode.rs  enums.rs  graph.rs  id.rs  map.rs  metrics.rs  path.rs  primitivs.rs  property.rs  set.rs  traverser.rs  vertex.rs
