[package]
name = "graph-binary-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "gremlin_types",
]

[dependencies]
uuid = {version = "1.0.0" , features = ["v4","fast-rng","serde"]}
serde = {version = "1.0.0",features = ["derive"]}
thiserror = "1.0.0"
lazy_static = "1.4.0"
websocket = "0.26.0"

[dev-dependencies]
criterion = "0.3.0"
serde_json = "1.0.0"


[[bench]]
name = "benchmark"
harness = false

#[profile.bench]
#debug = true