[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
uuid = {version = "1.0" , features = ["v4","fast-rng","serde"]}
serde = {version = "1.0",features = ["derive"]}
thiserror = "1.0"
lazy_static = "1.4"
websocket = "0.26"
tinkerpop_io = {path = "../tinkerpop_io"}
r2d2 = "0.8"

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0"
websocket = "0.26"

