[package]
name = "gremlin_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.0.0" , features = ["v4","fast-rng","serde"]}
serde = {version = "1.0.0",features = ["derive"]}
thiserror = "1.0.0"
serde_json = "1.0.0"

[dev-dependencies]
criterion = "0.3.0"


[features]
# Defines a feature named `webp` that does not enable any other features.
default = ["graph_binary","graph_son"] 
full = ["default","extended","serde"]
graph_son = ["graph_son_v3","graph_son_v2"]
graph_son_v3 = []
graph_son_v2 = []
graph_binary = []
extended = []
serde = []