[package]
name = "tinkerpop_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.1" , features = ["v4","fast-rng"]}
serde = {version = "1.0",features = ["derive"], optional = true}
thiserror = "1.0"
serde_json = { version = "1.0",features = ["arbitrary_precision"], optional = true }
chrono = {version = "0.4",optional = true}
num = { version = "0.4", features = ["num-bigint"]}
bigdecimal = {version = "0.3"}

[features]
default = ["graph_binary","graph_son","extended","serde","custom"] 
graph_binary = []
custom = ["graph_binary"]
full = ["default","serde"]
graph_son = ["dep:serde_json"]
extended = ["dep:chrono"]
serde = ["dep:serde"]



[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
